fix: update jumbotron container margin for improved spacing

--- a/src/index.css
+++ b/src/index.css
@@ -368,7 +368,7 @@ label.form-label {
 }
 
 .jumbotron-container {
-  margin-top: 4%;
+  margin-top: 90px;
   position: relative;
   width: 100%;
   overflow: hidden;
